TestRepo2/src/objects/State_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Applicability_Comment__c</fullName>
        <label>Conditions/Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Applies__c</fullName>
        <label>Permissible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes (with Restrictions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipName>State_Rules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>State_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Statute_Link__c</fullName>
        <inlineHelpText>The link to the statute</inlineHelpText>
        <label>Statute Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Statute_Ref__c</fullName>
        <inlineHelpText>The legal statute reference</inlineHelpText>
        <label>Statute Ref</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <label>State Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Rule__c</columns>
        <columns>Rule_Applies__c</columns>
        <columns>Applicability_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Applicable_Rules</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Rule__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_Applies__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>All Applicable Rules</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>State Issues ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>